# logger

./: .gitignore  agents.md  logger.py  pyproject.toml  readme.md
.codex/skills/logfire-read/: SKILL.md
.codex/skills/logfire-read/scripts/: read_logs.sh
example_compose/: docker-compose.yml  dockerfile  log_processor.py  logs.db  readme.md  requirements.txt  test_logger.py
log_processor/: log_processor.py  readme.md  requirements.txt
logger/: __init__.py  demo.py  logfire_read.py  logger.py  readme.md
scripts/: compose-down.sh  compose-up.sh  logfire-fetch.py  logfire-read-agent.py
